@@ -29,8 +29,6 @@ import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class DeleteEntityCollectionAttributeCommand
@@ -45,13 +43,14 @@ public class DeleteEntityCollectionAttributeCommand
                 new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), null)
         ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
                 new FieldDefinition("Uuid", FieldType.UUID, false, null, null),
                 new FieldDefinition("EntityAttributeName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("EntityAttributeUuid", FieldType.UUID, false, null, null),
-                new FieldDefinition("EntityRefAttribute", FieldType.ENTITY_REF, true, null, null)
-                ));
+                new FieldDefinition("EntityRefAttribute", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("UuidAttribute", FieldType.UUID, false, null, null)
+        );
     }
     
     /** Creates a new instance of DeleteEntityCollectionAttributeCommand */
@@ -68,11 +67,10 @@ public class DeleteEntityCollectionAttributeCommand
                     EntityAttributeTypes.COLLECTION);
 
             if(!hasExecutionErrors()) {
-                var coreControl = getCoreControl();
-                var entityRefAttribute = form.getEntityRefAttribute();
-                var entityInstanceAttribute = coreControl.getEntityInstanceByEntityRef(entityRefAttribute);
+                var entityInstanceAttribute = EntityAttributeLogic.getInstance().getEntityInstanceAttribute(this, form);
 
-                if(entityInstanceAttribute != null) {
+                if(!hasExecutionErrors()) {
+                    var coreControl = getCoreControl();
                     var entityCollectionAttribute = coreControl.getEntityCollectionAttributeForUpdate(entityAttribute, entityInstance, entityInstanceAttribute);
                     
                     if(entityCollectionAttribute != null) {
@@ -83,8 +81,6 @@ public class DeleteEntityCollectionAttributeCommand
                                 entityAttribute.getLastDetail().getEntityAttributeName(),
                                 EntityInstanceLogic.getInstance().getEntityRefFromEntityInstance(entityInstanceAttribute));
                     }
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownEntityRefAttribute.name(), entityRefAttribute);
                 }
             }
         }
